--- a/config/database.yml
+++ b/config/database.yml
@@ -14,14 +14,19 @@ default: &default
 
 development:
   <<: *default
-  database: 'beer_graph_development'
+  database: beer_graph_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: 'beer_graph_test'
+  database: beer_graph_test
+
 production:
-  <<: *default
-  database: 'beer_graph_production'
+    adapter: postgresql
+    encoding: unicode
+    host: ec2-54-83-204-228.compute-1.amazonaws.com
+    database: d4v5isf03vd7s1
+    username: oqtidgftpabppy
+    password: FrD62IHFa5dJeaiBK1FBP2PtYL
